update task params in db; send temporal signal to workflow
